--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -60,7 +60,7 @@
 
 @layer base {
   * {
-    @apply border-border box-border;
+    @apply box-border border-border;
   }
   body {
     @apply bg-background text-foreground;
